--- a/vignettes/lasR2.Rmd
+++ b/vignettes/lasR2.Rmd
@@ -529,7 +529,7 @@ terra::plot(r2, col = col)
 
 ## Compatibility with lidR
 
-While `lasR` does not depends on `lidR` it has some compatibilities with it. Instead of providing paths to files or folder it is possible to pass a `LAScatalog` to the readers.
+While `lasR` does not depends on `lidR` it has some compatibility with it. Instead of providing paths to files or folder it is possible to pass a `LAScatalog` to the readers.
 
 ```r
 library(lasR)
@@ -537,6 +537,5 @@ library(lidR)
 
 ctg = readLAScatalog(folder)
 pipeline = reader(ctg) + normalize() + write_las()
-
 ans = processor(pipeline)
 ```
