--- a/vignettes/lasR2.Rmd
+++ b/vignettes/lasR2.Rmd
@@ -443,12 +443,9 @@ head(ans[[2]])
 
 There are several readers hidden behind `reader()`: 
 
-- `reader_file_coverage()`: will read of the files and process the entire point cloud.
-- `reader_file_rectangles()`: will read only some rectangular regions of interest of the coverage and process then sequentially.
-- `reader_file_circles()`: will read only some circular regions of interest of the coverage and process then sequentially.
-- `reader_dataframe_coverage()` : will read a `data.frame` and convert it internally into the internal `lasR`'s memory structure. It processes the entire point-cloud.
-- `reader_dataframe_rectangles()`: will read a `data.frame` and convert it internally into the internal `lasR`'s memory structure. It processes only the regions of interest sequentially.
-- `reader_dataframe_circles()`: will read a `data.frame` and convert it internally into the internal `lasR`'s memory structure. It processes only the regions of interest sequentially.
+- `reader_coverage()`: will read of the files and process the entire point cloud.
+- `reader_rectangles()`: will read only some rectangular regions of interest of the coverage and process then sequentially.
+- `reader_circles()`: will read only some circular regions of interest of the coverage and process then sequentially.
 
 The following pipeline triangulates the ground points, normalizes the point cloud, and computes some metric of interest **for each file of the entire coverage**. Each file is loaded with a buffer so that triangulation is performed without edge artifacts. Notice the use of `drop_buffer = TRUE` to expose the `data.frame` without the buffer used to perform the triangulation and normalization.
 
