--- a/vignettes/lasR1.Rmd
+++ b/vignettes/lasR1.Rmd
@@ -65,7 +65,7 @@ lines(x, y, col = "red", lwd = 2)
 legend("topleft", legend = c("lidR", "lasR"), fill = c( col = col1, col2), border = NA)
 ```
 
-The second issue is the absence of a powerful pipeline engine in `lidR`. Performing a task as simple as extracting and deriving metrics for multiple inventory plots from a non-normalized collection of files is not that easy in `lidR`. It is straightforward if the point cloud is normalized, but if not, users must write a complex custom script. With the introduction of real pipelines, `lasR` enables users to do more complex tasks in an easier way (see the tutorial vignette as well as the pipeline vignette).
+The second issue is the absence of a powerful pipeline engine in `lidR`. Performing a task as simple as extracting and deriving metrics for multiple inventory plots from a non-normalized collection of files is not that easy in `lidR`. It is straightforward if the point cloud is normalized, but if not, users must write a complex custom script. With the introduction of real pipelines, `lasR` enables users to do more complex tasks in an easier way (see [the tutorial](lasR2.html) vignette as well as [the pipeline](lasR3.html) vignette).
 
 Last but not least, I have almost a decade of additional experience with R, C++, point cloud processing, and a lot of feedback compared to when I started the creation of `lidR`. I was simply not technically capable of writing `lasR` ten years ago!
 
@@ -81,7 +81,7 @@ Unlike `lidR`, `lasR` does not load lidar data into a `data.frame`. It is design
 
 ### Dependencies
 
-`lasR` has only one dependency, `boost`. It doesn't even depend on `Rcpp`. `lasR` does not use `terra` and `sf` at the R level for reading and writing spatial data; instead, it links to `GDAL`. If `terra` and `sf` are installed, the output files will be read with these packages. Due to the absence of dependency on R objects and the non-loading of data as R objects, there is also no dependency on `rgl`, resulting in no interactive 3D viewer like in `lidR`.
+`lasR` has only one dependency, `boost`. It doesn't even depend on `Rcpp`. `lasR` does not use `terra` and `sf` at the R level for reading and writing spatial data; instead, it links to `GDAL`. If `terra` and `sf` are installed, the output files will be read with these packages. Due to the absence of dependency on R package and the non-loading of data as R objects, there is also no dependency on `rgl`, resulting in no interactive 3D viewer like in `lidR`.
 
 ### Code
 
