--- a/vignettes/lasR1.Rmd
+++ b/vignettes/lasR1.Rmd
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(
 library(lasR)
 ```
 
-## Rationnal for `lasR` vs. `lidR`
+## Rationnale for `lasR` vs. `lidR`
 
 Do we need a new package? The short answer lies in the following graph. The x-axis represents the time to perform three different rasterizations (a CHM, a DTM, and a density map), and the y-axis represents the amount of RAM memory used for `lidR` and `lasR` (more details in the benchmark vignette). `lasR` is intended to be much more efficient than `lidR` both in terms of memory usage and computation times.
 
@@ -87,3 +87,34 @@ Unlike `lidR`, `lasR` does not load lidar data into a `data.frame`. It is design
 
 `lasR` is written 100% in C++ and contains no R code. It utilizes the source code of `lidR` with significant improvements. The major improvements observed in the benchmark section are not so much in the source code but rather in the organization of the code, i.e., no longer using `data.frame`, memory management in C++ rather than R, no processing at the R level, pipelines, and so on.
 
+## Should I use `lidR` or `lasR`?
+
+The question is actually pretty simple to answer. If you want to explore, manipulate, test, try, retry, and implement new ideas you have in mind, use `lidR`. If you know what you want, and what you want is relatively common (raster of metrics, DTM, CHM, tree location), especially if you want it on a large coverage, use `lasR`.
+
+### Example 1
+
+I received 500 km² of data, and I want a CHM and a DTM.
+
+&rarr; Use `lasR` to compute both as fast as possible.
+
+### Example 2
+
+I want to segment the trees, explore different methods, and test different parameters on small plots. Maybe I will integrate a custom step, but it's an exploratory process.
+
+&rarr; Use `lidR`.
+
+### Example 3
+
+I want to extract circular ground inventories and compute metrics for each plot. If the dataset is already normalized, you can use either `lasR` or `lidR`; this is pretty much equivalent. `lidR` will be easier to use; `lasR` will be a little bit more efficient but more difficult to use (yet the [pipeline vignette](lasR3.html) contains a copy-pastable code for that). If your dataset is not normalized, `lasR` will be much simpler in that case, thanks to the pipeline processor that allows adding a normalization stage before computing the metrics.
+
+### Example 4
+
+I want to create a complex pipeline that computes the local shape of the points to classify roofs and wires in the point cloud. Then using a shapefile, I want to classify the water in the point cloud. To finish, I want to write new classified LAS files. 
+
+&rarr; Use `lidR`. `lasR` does not have so many tools. `lasR` is not `lidR`; it is much more efficient but less versatile and has fewer tools.
+
+### Example 5
+
+I want to find and segment the trees with a common algorithm. Nothing fancy. I want to do that on 100 km² or more. 
+
+&rarr; Use `lasR`. `lidR` will probably fail at doing it.
