Fix and cover normalize() and dtm()

--- a/vignettes/lasR3.Rmd
+++ b/vignettes/lasR3.Rmd
@@ -56,7 +56,7 @@ normalize = function(extrabytes = FALSE)
   else
   {
     trans = transform_with_triangulation(tri)
-    pipeline = pipeline
+    pipeline = pipeline + trans
   }
   
   return(pipeline)
